# wordfreak

./: .gitignore  Cargo.toml  Dockerfile  check_snakefile.sh  pyproject.toml
.github/workflows/: docker-publish.yml
src/: conllu.rs  corpus.rs  dispersion.rs  lib.rs  opensubs18.rs  parallel.rs  parquet2.rs  termdocmat.rs  types.rs  vocab.rs  vrt.rs  zip.rs
workflow/: Snakefile
