[package]
name = "wordfreak"
version = "0.1.0"
authors = ["Frankie Robertson <frankie@robertson.name>"]
edition = "2018"

[dependencies]
quick-xml = "0.22.0"
fnv = "1.0.3"
zip = "0.5.11"
piz = "0.4.0"
memmap = "0.7.0"
owning_ref = "0.4.1"
rayon = "1.5.1"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
argh = "0.1.5"
simple-error = "0.2.3"
itertools = "0.10.1"
arrow2 = "0.4.0"
superslice = "1.0.0"
howlong = "0.1.7"
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
internal-iterator = "0.1.2"

[profile.release]
lto = "fat"
codegen-units = 1
